// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Item component Should render an Item with an odd index 1`] = `
<WithStyles(ListItem)
  style={
    Object {
      "backgroundColor": "#F5F5F5",
    }
  }
>
  Odd item
</WithStyles(ListItem)>
`;

exports[`Item component should render an item with an even index 1`] = `
<WithStyles(ListItem)
  style={
    Object {
      "backgroundColor": "#EEEEEE",
    }
  }
>
  Even item
</WithStyles(ListItem)>
`;
